# ytdl-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.py
app/: __init__.py  cli.py  config.py  downloader.py  formats.py  ui.py  utils.py
assets/: .gitkeep
downloads/: .gitkeep
