[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "ytdl-cli"
version         = "1.0.0"
description     = "Terminal-based YouTube downloader powered by yt-dlp and Rich"
readme          = "README.md"
license         = {text = "MIT"}
requires-python = ">=3.9"
keywords        = ["youtube", "downloader", "yt-dlp", "cli", "terminal"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "yt-dlp>=2024.1.1",
    "rich>=13.7.0",
    "typer[all]>=0.12.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
ytdl = "app.cli:app"

[project.urls]
Homepage   = "https://github.com/kvxrlixd/ytdl-cli"
Repository = "https://github.com/kvxrlixd/ytdl-cli"
Issues     = "https://github.com/kvxrlixd/ytdl-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.toml"]

# ── ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

# ── black ─────────────────────────────────────────────────────────────────────

[tool.black]
line-length    = 100
target-version = ["py39", "py310", "py311", "py312"]

# ── mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict         = false
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
